# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a Kosha REST serice for exposing many freshservice features as REST APIs with better consistency, observability etc",
-        "title": "Freshservice Connector API",
+        "title": "Airtable Connector API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -13,7 +13,7 @@
     "host": "localhost:8012",
     "basePath": "/",
     "paths": {
-        "/api/v2/specification/list": {
+        "/api/v0/specification/list": {
             "get": {
                 "description": "Get all environment variables that need to be supplied",
                 "consumes": [
@@ -60,7 +60,7 @@
                 }
             }
         },
-        "/v0/{baseId}/{tableIdOrName}": {
+        "/api/v0/{baseId}/{tableIdOrName}/{recordId}": {
             "get": {
                 "description": "Get Records",
                 "consumes": [
@@ -73,6 +73,68 @@
                     "agents"
                 ],
                 "summary": "Get airtable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Base Id",
+                        "name": "baseId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Table Id",
+                        "name": "tableIdOrName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Base Id",
+                        "name": "recordId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Records"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v0/{baseId}/{tableId}": {
+            "get": {
+                "description": "Get Records",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "agents"
+                ],
+                "summary": "Get airtable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Base Id",
+                        "name": "baseId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Table Id",
+                        "name": "tableId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
