# pkg/app/records_router.go
@@ -1,8 +1,10 @@
 package app
 
 import (
+	"fmt"
 	"net/http"
 
+	"github.com/gorilla/mux"
 	"github.com/kosha/airtable-connector/pkg/httpclient"
 )
 
@@ -13,16 +15,19 @@ import (
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} models.Records
-// @Router /api/v0/{baseId}/{tableIdOrName} [get]
+// @Param baseId path string true "Base Id"
+// @Param tableId path string true "Table Id"
+// @Router /api/v0/{baseId}/{tableId} [get]
 func (a *App) listRecords(w http.ResponseWriter, r *http.Request) {
-
 	//Allow CORS here By * or specific origin
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Access-Control-Allow-Headers", "*")
 	w.Header().Set("Access-Control-Allow-Methods", "*")
-
-	agents := httpclient.ListRecords(a.Cfg.GetAirtableURL(), a.Cfg.GetApiKey())
-
+	vars := mux.Vars(r)
+	base_id := vars["baseId"]
+	table_id := vars["tableId"]
+	generated_url := a.Cfg.GetAirtableURL() + "/" + base_id + "/" + table_id
+	agents := httpclient.ListRecords(generated_url, a.Cfg.GetPersonalAccessToken())
 	respondWithJSON(w, http.StatusOK, agents)
 }
 
@@ -32,6 +37,9 @@ func (a *App) listRecords(w http.ResponseWriter, r *http.Request) {
 // @Tags agents
 // @Accept  json
 // @Produce  json
+// @Param baseId path string true "Base Id"
+// @Param tableIdOrName path string true "Table Id"
+// @Param recordId path string true "Base Id"
 // @Success 200 {object} models.Records
 // @Router /api/v0/{baseId}/{tableIdOrName}/{recordId} [get]
 func (a *App) getRecords(w http.ResponseWriter, r *http.Request) {
@@ -40,8 +48,12 @@ func (a *App) getRecords(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Access-Control-Allow-Headers", "*")
 	w.Header().Set("Access-Control-Allow-Methods", "*")
-
-	agents := httpclient.GetRecords(a.Cfg.GetAirtableURL(), a.Cfg.GetApiKey())
-
+	vars := mux.Vars(r)
+	base_id := vars["baseId"]
+	table_id := vars["tableIdOrName"]
+	recordId := vars["recordId"]
+	generated_url := a.Cfg.GetAirtableURL() + "/" + base_id + "/" + table_id + "/" + recordId
+	fmt.Println(generated_url)
+	agents := httpclient.GetRecords(generated_url, a.Cfg.GetPersonalAccessToken())
 	respondWithJSON(w, http.StatusOK, agents)
 }
